# ci-sandbox

./: .bootc-dev-infra-commit.txt  .packit.yaml  Cargo.toml  Containerfile.host  Justfile  MAINTAINERS.md  README.md  cifull.txt  file-s3a.txt  file-s3b.txt  file-s4a.txt  file-s5.txt  renovate.json  test-file-1.txt  test-file-2.txt  test-file-3.txt  test-mq-1.txt  test-mq-2.txt  test-mq-3.txt
.config/: nextest.toml
.github/scripts/: README.md  assign_reviewer.py  compute-ci-level.mjs  config.json
.github/workflows/: build-sealed.yml  ci.yml  debug-arm64-upterm.yml  docs.yml  integration.yml  main.yml  pr-reviewer-rotation.yml  renovate.yml  scheduled-release.yml  scorecard-analysis.yml  snapshot-bootc-16c.yml  test-bootc-16c.yaml  testing.yml
contrib/packaging/: bcvk.spec
crates/bcvk-qemu/: Cargo.toml
crates/bcvk-qemu/src/: lib.rs  qemu.rs
crates/cfsctl/: Cargo.toml
crates/composefs/: Cargo.toml
crates/composefs-boot/: Cargo.toml
crates/composefs-fuse/: Cargo.toml
crates/composefs-http/: Cargo.toml
crates/composefs-oci/: Cargo.toml
crates/cstorage/: Cargo.toml
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: main.rs
crates/integration-tests/src/tests/: run_ephemeral.rs  run_ephemeral_ssh.rs  varlink.rs
crates/kit/: Cargo.toml
crates/ostree-ext/: Cargo.toml
crates/tests-integration/: Cargo.toml
crates/xtask/: Cargo.toml
docs/src/: SUMMARY.md  varlink.md
hack/: Containerfile  packages.txt  provision-derived.sh
kernel-build/: Containerfile  README.md  kernel-local
sealing/: Containerfile.host  Justfile  README.md
sealing-gen2-ipe/: .gitignore  README.md
sealing-gen2-ipe/kernel-build/: 0001-overlayfs-lsm-Notify-LSMs-when-overlay-verity-valida.patch  (+1 more)
tests/: build.sh  test.sh
(+28 files in other folders)
